--- a/S_Coder/login.html
+++ b/S_Coder/login.html
@@ -140,6 +140,7 @@
 							localStorage.setItem("level", result.detail.level);
 							localStorage.setItem("score", result.detail.score);
 							localStorage.setItem("portrait", result.detail.portrait);
+							localStorage.setItem("getNew", result.detail.getNew);
 							var webview_style = {
 								popGesture: "close"
 							};
