--- a/S_Coder/total.html
+++ b/S_Coder/total.html
@@ -174,6 +174,13 @@
 				font-size: 12px;
 				padding-left: 2%;
 			}
+			#getNew{
+				display: inline;
+			}
+			#getNew img{
+				width: 15%;
+				margin-left: 60%;
+			}
 		</style>
 	</head>
 
@@ -214,8 +221,13 @@
 								</a>
 							</li>
 							<li class="mui-table-view-cell">
-								<a class="mui-navigate-right">
-									<img src="img/message.png" class="menuicon" />消息
+								<a class="mui-navigate-right" href="message.html?type=0">
+									<img src="img/message.png" class="menuicon" />消息 <div id="getNew"></div>
+								</a>
+							</li>
+							<li class="mui-table-view-cell">
+								<a class="mui-navigate-right" href="message.html?type=1">
+									<img src="img/message.png" class="menuicon" />我参与的
 								</a>
 							</li>
 							<li class="mui-table-view-cell">
@@ -254,7 +266,7 @@
 								</div>
 								<!-- 第一张 -->
 								<div class="mui-slider-item">
-									<a href="#">
+									<a href="total.html" >
 										<img src="img/banner2.jpg">
 									</a>
 								</div>
@@ -353,9 +365,16 @@
 			$("#nickname").html(nickname);
 			var portrait = localStorage.getItem("portrait");
 			$(".touxiang img").attr("src","http://112.74.187.146:8080/img/"+portrait);
+			var getNew=localStorage.getItem("getNew");
+			if(getNew){
+				$("getNew").html('<img src="img/newicon.png" />');
+			}else{
+				$("#getNew img").remove();
+			}
 		}
 
 		function getIndexContent() {
+			
 			var now = new Date();
 			$("#indexContent").html("");
 			var mineUrl = "http://112.74.187.146:8080/studyapp/note/findAll";
@@ -391,6 +410,7 @@
 				}
 
 				$("#indexContent").append(str);
+				 mui('#pullrefresh').pullRefresh().endPulldownToRefresh();
 			})
 		}
 
@@ -408,6 +428,7 @@
 				}
 			}
 		});
+
 
 		if (mui.os.plus) {
 			mui.plusReady(function() {
@@ -452,6 +473,9 @@
 		})
 
 		mui("#pullrefresh").scroll();
+
+
+		
 	</script>
 
 </html>
